--- a/pokemon-nextjs/package.json
+++ b/pokemon-nextjs/package.json
@@ -9,8 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@nextui-org/react": "^2.3.6",
-    "framer-motion": "^11.1.9",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@mui/material": "^5.15.17",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18"
